@@ -1,0 +1,11 @@
+
+<h1 mat-dialog-title>Confirm deletion of task!</h1>
+<div mat-dialog-content>
+  <p>Please confirm deletion of task <label style="color: Red;">{{data.task}}</label></p>
+</div>
+<div mat-dialog-actions>
+  <div style="width:100%; text-align: right;">
+    <button mat-button [mat-dialog-close]="data.task">Ok</button>
+    <button mat-button (click)="close()">Close</button>
+  </div>
+</div>
