@@ -41,6 +41,15 @@
         <th mat-header-cell *matHeaderCellDef>Due</th>
         <td mat-cell *matCellDef="let el">{{el.due | fromNow}}</td>
       </ng-container>
+
+      <ng-container matColumnDef="delete">
+        <th mat-header-cell *matHeaderCellDef>Delete</th>
+        <td mat-cell *matCellDef="let el">
+          <button
+            (click)="delete(el)"
+            mat-button>Delete</button>
+        </td>
+      </ng-container>
       
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{'highlight': selectedTaskName == row.name}" (click)="selectTask(row.name)"></tr>
@@ -83,10 +92,6 @@
           mat-button
           matTooltip="Evaluates the task"
           (click)="runTask()">Run</button>
-        <button 
-          mat-button
-          matTooltip="Deletes the task"
-          (click)="deleteActiveTask()">Delete</button>
       </div>
     </div>
 
